# cpp-advent-of-code-2025

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: bench_days.cpp
src/: main.cpp
src/core/: Parallel.h  Register.h  Registry.cpp  Registry.h  Solution.h
src/days/: day01.cpp  day02.cpp  day02.h  day03.cpp  day03.h  day04.cpp  day04.h  day05.cpp  day05.h  day06.cpp  day06.h  day07.cpp  day07.h  day08.cpp  day08.h  day09.cpp  day09.h  day10.cpp  day10.h  day11.cpp  day11.h  day12.cpp  day12.h
tests/: test_day01.cpp  test_day02.cpp  test_day03.cpp  test_day04.cpp  test_day05.cpp  test_day06.cpp  test_day07.cpp  test_day08.cpp  test_day09.cpp  test_day10.cpp  test_day11.cpp  test_day12.cpp  test_utils.cpp  test_utils.h
